examples/erroneous/semantic_erroneous/addchar2.grc
fun main() : nothing
{
  writeInteger(0 + 'l');
  writeString(" = 1\n");
}
